# NAV_flight_controller

./: .gitignore  .gitmodules  README.md
media/: Telemetria.csv
software/: CMakeLists.txt  README.md  pico_sdk_import.cmake
software/include/ahr/: ahr.cpp  ahr.h
software/include/ahr/mahony/: mahony.h
software/include/led/: led.cpp  led.h
software/include/madflight/: madflight.cpp  madflight.h
software/include/rclsim/: rclsim.cpp  rclsim.h
software/src/: Quadcopter.cpp  altitude_mode.cpp  angle_mode.cpp  docking.cpp  docking_control.cpp  docking_monochrome.cpp  docking_spi.cpp  docking_spicolor.cpp  flight.cpp  graficos_telemetria.py  main.cpp  teclado.py  telemetry_20250707_135731.csv  telemetry_20250707_165958.csv  telemetry_20250708_100603.csv  telemetry_20250708_142554.csv  telemetry_20250708_143608.csv  velocity_mode.cpp
